--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,5 +37,14 @@ flutter:
     - assets/images/flies/macho-fly-2.png
     - assets/images/flies/macho-fly-dead.png
     - assets/images/bg/background.jpg
+    - assets/images/bg/lose-splash.png
+    - assets/images/branding/title.png
+    - assets/images/ui/dialog-credits.png
+    - assets/images/ui/dialog-help.png
+    - assets/images/ui/icon-credits.png
+    - assets/images/ui/icon-help.png
+    - assets/images/ui/start-button.png
+    - assets/images/ui/new-pic.jpg
+    - assets/images/branding/logo_transparent.png
 
 
